# docgen-mcp-server

./: .gitignore  README.md  config.py  package-lock.json  package.json  pyproject.toml  requirements.txt  security.py  server.py  services.py  test_e2e.py  tsconfig.json
.cursor/: mcp.json.example
docgen_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
handlers/: docx_handler.py  excel_handler.py  pdf_handler.py  pptx_handler.py  txt_handler.py  zip_handler.py
mcp-docgen/: __main__.py
mcp-docgen/handlers/: chart_handler.py  docx_handler.py  markdown_handler.py
mcp-docgen/utils/: file_utils.py  security.py
scripts/: build.mjs  bump-version.mjs
src/: cli.ts  server.ts
src/config/: limits.ts
src/services/: bundle-zip.ts  diff-file.ts  patch-doc.ts  patch-sheet.ts  read-archive.ts  read-doc.ts  read-sheet.ts  render-html.ts  scan-dir.ts  write-doc.ts  write-sheet.ts
src/shared/: error-service.ts  markdown-docx.ts  security.ts  tool-result.ts  tool-runner.ts  yauzl-cjs.ts
src/tools/: index.ts  register-patch-tools.ts  register-read-tools.ts  register-render-tools.ts  register-system-tools.ts  register-write-tools.ts
