[project]
name = "docgen-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "mammoth>=1.12.0",
    "markdownify>=1.2.2",
    "mcp>=1.27.2",
    "openpyxl>=3.1.5",
    "playwright>=1.60.0",
    "pypdf>=6.12.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
]

[project.scripts]
docgen-mcp-server = "server:main"

[tool.setuptools]
py-modules = ["server", "config", "security", "services"]




